# hangman-game

./: .gitignore  CMakeLists.txt  acertou.cpp  adiciona_palavra.cpp  cabecalho.cpp  chute.cpp  chutes_errados.cpp  enforcou.cpp  existe.cpp  forca.cpp  imprime_palavra.cpp  ler_arquivo.cpp  main.cpp  palavras.txt  placar.cpp  salva_arquivo.cpp  sorteia.cpp
