cmake_minimum_required(VERSION 3.26)
project(forca)

set(CMAKE_CXX_STANDARD 17)

add_executable(forca main.cpp
        imprime_erros.cpp
        adiciona_palavra.cpp
        chuta.cpp
        imprime_cabecalho.cpp
        imprime_erros.cpp
        le_arquivo.cpp
        letra_existe.cpp
        nao_acertou.cpp
        nao_enforcou.cpp
        salva_arquivo.cpp
        sorteia_palavra.cpp
        adiciona_palavra.cpp
        salva_arquivo.cpp
        nao_enforcou.cpp
        salva_arquivo.cpp
        sorteia_palavra.cpp
        imprime_palavra.cpp)
